--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-visually-hidden": "^1.0.3",
+    "@splinetool/react-spline": "^4.1.0",
     "ethers": "^5.7.2",
     "next": "15.3.5",
     "react": "^19.0.0",
